--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,11 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #141b41;">
+  <body style="background-image: url(cleanbase-background.svg);
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
